# testAndteachmodelForSummary

./: .env.example  .gitignore  README.md  docker-compose.yml
.run/: ai_notes-category-sanitized-summary-results.json  ai_notes-failed2-message-sanitized-expanded-results.json  ai_notes-failed3-sentence-sanitized-expanded-results.json  ai_notes-message-sanitized-summary-results.json  ai_notes-segment-sanitized-mild-batch-payload.json  ai_notes-sentence-sanitized-summary-results.json  ai_notes-summary-results.json  ai_notes-word-sanitized-expanded-summary-results.json  ai_notes-word-sanitized-summary-results.json  exm2-sanitized-summarize-payload.json  parse_check.json  (+9 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: config.py  gemini.py  main.py  models.py  parsing.py  prompting.py  vertex.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  chat.py  documents.py  health.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py
backend/app/repositories/: documents.py  users.py
backend/app/schemas/: auth.py  chat.py  documents.py
backend/app/services/: auth.py  chunking.py  documents.py  embeddings.py  llm.py  parsing.py  rag.py  vector_store.py
backend/app/tests/: conftest.py  test_chunking.py  test_visibility.py
backend/migrations/: env.py
backend/migrations/versions/: 20260618_0001_initial_enterprise_rag.py
backend/src/: analytics.js  config.js  gemini.js  logging.js  parsing.js  prompting.js  server.js  vertex.js
(+17 files in other folders)
